@@ -397,6 +397,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7324. haadmin command usage prints incorrect command name.
     (Brahma Reddy Battula via suresh)
 
+    HDFS-7199.  DFSOutputStream should not silently drop data if DataStreamer
+    crashes with an unchecked exception (rushabhs via cmccabe)
+
 Release 2.6.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
